--- a/itoneproj/itoneapp/templates/itoneapp/login.html
+++ b/itoneproj/itoneapp/templates/itoneapp/login.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    {% if message == 'failure' %}
-    <h3 style="color:red">That username and password do not match</h3>
-    {% elif message == 'loggedout' %}
-    <h3 style="color:blue">Successfully logged out</h3>
-    {% endif %}
-    <h1>Login</h1>
-    <form action="{% url 'itoneapp:login_user' %}" method="post">
-      {% csrf_token %}
-      <input type="hidden" name="next" value="{{next}}"/>
-      <input type="text" name="username" value="" placeholder="username">
-      <input type="password" name="password" value="" placeholder="password">
-      <button type="submit">login</button>
-    </form>
-    <a href="{% url 'itoneapp:register' %}">Sign up</a>
 
+{% extends "itoneapp/base.html" %}
+{% block content %}
 
-  </body>
-</html>
+  {% if message == 'failure' %}
+  <h3 style="color:red">That username and password do not match</h3>
+  {% elif message == 'loggedout' %}
+  <h3 style="color:blue">Successfully logged out</h3>
+  {% endif %}
+  <h1>Login</h1>
+  <form action="{% url 'itoneapp:login_user' %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="next" value="{{next}}"/>
+    <input type="text" name="username" value="" placeholder="username">
+    <input type="password" name="password" value="" placeholder="password">
+    <button type="submit">login</button>
+  </form>
+  <a href="{% url 'itoneapp:register' %}">Sign up</a>
+
+{% endblock content %}
