--- a/itoneproj/itoneapp/templates/itoneapp/profile.html
+++ b/itoneproj/itoneapp/templates/itoneapp/profile.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    {{user.username}}<br>{{user.email}}
-    <a href="{% url 'itoneapp:logout' %}">logout</a>
-  </body>
-</html>
+
+{% extends "itoneapp/base.html" %}
+{% block content %}
+
+  {{user.username}}<br>{{user.email}}
+  <a href="{% url 'itoneapp:logout' %}">logout</a>
+
+{% endblock content %}
