--- a/itoneproj/itoneapp/templates/itoneapp/base.html
+++ b/itoneproj/itoneapp/templates/itoneapp/base.html
@@ -49,7 +49,7 @@
         <div class="col-md-8">
           {% block content %}{% endblock %}
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
@@ -61,7 +61,7 @@
               </ul>
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
 
