--- a/itoneproj/itoneapp/static/itoneapp/main.css
+++ b/itoneproj/itoneapp/static/itoneapp/main.css
@@ -2,19 +2,20 @@ body {
   background: #fafafa;
   color: #333333;
   margin-top: 5rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+  color: #231f20;
 }
 
 ul {
   margin: 0;
 }
 
-.bg-steel {
+/* .bg-steel {
   background-color: #dfe0e1;
-}
+} */
 
 .site-header .navbar-nav .nav-link {
   color: #000000;
@@ -82,3 +83,94 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.icon-shadow {
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.font-10 {
+  font-size: 10px;
+}
+
+
+/* Start Calendar CSS */
+/* credit to https://codepen.io/jenniferperrin/pen/IAhKv  */
+/* @import url(https://fonts.googleapis.com/css?family=Muli:400, 300); */
+/* body { margin-top: 3%; } */
+
+.calendar, .calendar_weekdays, .calendar_content {
+    max-width: 300px;
+}
+.calendar {
+    margin: auto;
+    font-family:'Muli', sans-serif;
+    font-weight: 400;
+}
+.calendar_content, .calendar_weekdays, .calendar_header {
+    position: relative;
+    overflow: hidden;
+}
+.calendar_weekdays div {
+    display:inline-block;
+    vertical-align:top;
+}
+.calendar_weekdays div, .calendar_content div {
+    width: 14.28571%;
+    overflow: hidden;
+    text-align: center;
+    background-color: transparent;
+    color: #6f6f6f;
+    font-size: 14px;
+}
+.calendar_content div {
+    border: 1px solid transparent;
+    float: left;
+}
+.calendar_content div:hover {
+    border: 1px solid #dcdcdc;
+    cursor: default;
+}
+.calendar_content div.blank:hover {
+    cursor: default;
+    border: 1px solid transparent;
+}
+.calendar_content div.past-date {
+    color: #d5d5d5;
+}
+.calendar_content div.today {
+    font-weight: bold;
+    font-size: 14px;
+    color: #87b633;
+    border: 1px solid #dcdcdc;
+}
+.calendar_content div.selected {
+    background-color: #f0f0f0;
+}
+.calendar_header {
+    width: 100%;
+    text-align: center;
+}
+.calendar_header h2 {
+    padding: 0 10px;
+    font-family:'Muli', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #87b633;
+    float:left;
+    width:70%;
+    margin: 0 0 10px;
+}
+button.switch-month {
+    background-color: transparent;
+    padding: 0;
+    outline: none;
+    border: none;
+    color: #dcdcdc;
+    float: left;
+    width:15%;
+    transition: color .2s;
+}
+button.switch-month:hover {
+    color: #87b633;
+}
+/* End Calendar CSS */
