--- a/itoneproj/itoneapp/templates/itoneapp/base0.html
+++ b/itoneproj/itoneapp/templates/itoneapp/base0.html
@@ -35,6 +35,7 @@
 
     <script src="{% static 'itoneapp/js/calendar.js' %}"></script>
     <script src="{% static 'itoneapp/js/menu.js' %}"></script>
+    <script src="{% static 'itoneapp/js/main.js' %}"></script>
 
   </body>
 </html>
