--- a/itoneproj/itoneapp/templates/itoneapp/profile.html
+++ b/itoneproj/itoneapp/templates/itoneapp/profile.html
@@ -1,8 +1,81 @@
 
 {% extends "itoneapp/base.html" %}
 {% block content %}
+{% load static %}
 
-  {{user.username}}<br>{{user.email}}
-  <a href="{% url 'itoneapp:logout' %}">logout</a>
+<style>
+  .profile-body {
+    background-color: #27489d;
+    border-radius: 40px 40px 0 0;
+    height: 73vh;
+    transform: translate(0, 10vh);
+
+  }
+  .inner-profile {
+    transform: translate(0, -12vh);
+    /* height: 50vh; */
+  }
+
+  .inner-profile img {
+    border: 8px solid white;
+  }
+</style>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col mt-2">
+      <div class="d-flex justify-content-center">
+        <a href="{% url 'itoneapp:home' %}">
+          <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="125px"/>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-center">
+        <h6>your profile</h6>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="profile-body">
+  <div class="inner-profile">
+
+    <div class="container">
+
+
+      <div class="row mt-5">
+        <div class="col mt-2">
+          <div class="d-flex justify-content-center">
+            <img src="{{user.profile_image.url}}" alt="" class="rounded-circle" width="200px">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-12 col-md-12 col-sm-12 d-flex justify-content-center mt-5">
+        <div class="text-center">
+          <div class="text-white mt-1 text-left">Username:&nbsp;&nbsp;{{user.username}}</div>
+          <div class="text-white mt-1">Email: &nbsp;&nbsp; {{user.email}}</div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-12 col-md-12 col-sm-12 d-flex justify-content-center mt-13">
+          <a class="btn btn-primary btn-lg btn-block bg-white text-color-blue" href="{% url 'itoneapp:logout' %}">logout</a>
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+</div>
 
 {% endblock content %}
