--- a/itoneproj/itoneapp/static/itoneapp/css/menu.css
+++ b/itoneproj/itoneapp/static/itoneapp/css/menu.css
@@ -8,7 +8,7 @@ header {
 
 
 .logo {
-  width: 150px;
+  width: 200px;
   z-index: 3;
   padding-top: 17px;
   padding-left: 17px;
@@ -73,7 +73,7 @@ header {
   padding: 0;
   background-color: rgba(255, 255, 255, 1);
   list-style: none;
-  transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, 100%, 0);
   transition: all 0.5s ease-out;
 }
 .menu-nav.show {
@@ -91,7 +91,7 @@ header {
 .menu-branding .portrait {
   width: 150px;
   height: 150px;
-  background: url("../logo/brand3.png");
+  /* background: url("../logo/brand3.png"); */
   border-radius: 50%;
   border: solid 2px #27489d;
 }
@@ -165,9 +165,12 @@ header {
   }
   .menu-nav {
     height: 70vh;
-    /* transform: translate3d(-100%, 0, 0); */
+    transform: translate3d(100%, 0, 0);
     font-size: 24px;
-
+  }
+  .menu-branding {
+    height: 30vh;
+    transform: translate3d(100%, 0, 0);
   }
   .menu .nav-item {
     transform: translate3d(0, 0, 0);
@@ -177,10 +180,7 @@ header {
     font-size: 20px;
     transform: translate(0px,-100px);
   }
-  .menu-branding {
-    height: 30vh;
-    transform: translate3d(100%, 0, 0);
-  }
+
   .menu-branding .portrait {
     width: 150px;
     height: 150px;
