--- a/itoneproj/itoneapp/templates/itoneapp/base.html
+++ b/itoneproj/itoneapp/templates/itoneapp/base.html
@@ -9,13 +9,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="{% static 'itoneapp/css/main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'itoneapp/css/menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'itoneapp/css/calendar.css' %}">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
-    <script></script>
 
     {% if title %}
       <title>itone-{{ title }}</title>
@@ -28,11 +30,11 @@
     <header>
 
       <div class="nav-top">
-        <div>
+        <!-- <div>
           <a href="{% url 'itoneapp:home' %}">
             <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="logo"/>
           </a>
-        </div>
+        </div> -->
 
         <div class="menu-btn">
           <div class="btn-line"></div>
@@ -44,24 +46,27 @@
           <div class="menu-branding">
             <a href="{% url 'itoneapp:home' %}">
               <img src="{{user.profile_image.url}}" alt="" class="rounded-circle" width="150px">
-              <!-- <div class="portrait"></div> -->
             </a>
           </div>
           <ul class="menu-nav">
+
             <li class="nav-item current">
               <a href="{% url 'itoneapp:home' %}" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">Profile</a>
+              <a href="{% url 'itoneapp:profile' %}" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
-              <a href="resume.html" class="nav-link">Journal</a>
+              <a href="{% url 'itoneapp:journal_list' %}" class="nav-link">Journal</a>
             </li>
             <li class="nav-item">
               <a href="projects.html" class="nav-link">Evaluation</a>
             </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Community</a>
+            <li class="nav-item mt-5">
+              <!-- <a href="{% url 'itoneapp:logout' %}" class="nav-link">Logout</a> -->
+              <a href="{% url 'itoneapp:logout' %}">
+                <button type="button" class="btn btn-primary btn-lg btn-block bg-color-blue">Logout</button>
+              </a>
             </li>
           </ul>
         </nav>
@@ -72,14 +77,8 @@
 
     {% block content %}{% endblock %}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <script src="{% static 'itoneapp/js/calendar.js' %}"></script>
     <script src="{% static 'itoneapp/js/menu.js' %}"></script>
+
 
   </body>
 </html>
