--- a/itoneproj/itoneapp/templates/itoneapp/home.html
+++ b/itoneproj/itoneapp/templates/itoneapp/home.html
@@ -1,12 +1,13 @@
+
 {% extends "itoneapp/base.html" %}
 {% block content %}
-
+{% load static %}
 
 
 <div class="container">
 
   <div class="row">
-    <div class="col mt-5">
+    <div class="col mt-2">
       <div class="d-flex justify-content-center">
         <img src="{{user.profile_image.url}}" alt="" class="rounded-circle" width="125px">
       </div>
@@ -30,7 +31,7 @@
       <!-- loop over emotions and make a div for each -->
       {% for emotion in emotions %}
       <div class="text-center">
-        <a href=""><img src="{{emotion.emotion_icon.url}}" alt="" width="50px" class="rounded-circle shadow"></a>
+        <a href="{% url 'itoneapp:journal_entry' %}?emotion={{emotion.id}}"><img src="{{emotion.icon.url}}" alt="" width="50px" class="rounded-circle shadow"></a>
 
         <div class="font-10 mt-1">{{emotion.emotion_name}}</div>
       </div>
@@ -43,10 +44,24 @@
   <div class="row mt-4">
     <div class="col-lg-12 col-md-6 col-sm-4 d-flex justify-content-center">
 
-      <div class="text-center d-flex justify-content-between">
-        <div class="card ">
+      <div class="text-center d-flex justify-content-between align-middle">
+        <div class="card">
+          <div class="d-flex justify-content-between mt-2">
+            <p class="text-left" onclick="previous()"> < </p>
 
-          <h3 class="card-header" id="monthAndYear"></h3>
+
+            <h3 class="text-left" id="monthAndYear"></h3>
+
+            <p class="text-center" onclick="next()"> > </p>
+
+
+          </div>
+
+
+
+
+
+          <!-- <h3 class="card-header" id="monthAndYear"></h3> -->
 
           <table class="table table-bordered table-responsive-sm" id="calendar">
             <thead>
@@ -64,11 +79,11 @@
             <tbody id="calendar-body"></tbody>
           </table>
 
-          <div class="form-inline">
+          <!-- <div class="form-inline">
             <button class="btn btn-outline-primary col-sm-6" onclick="previous()">Previous</button>
             <button class="btn btn-outline-primary col-sm-6" onclick="next()">Next</button>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -80,9 +95,9 @@
 
 </div>
 
-
+<script src="{% static 'itoneapp/js/calendar.js' %}"></script>
 
 
   <!-- <a href="{% url 'itoneapp:logout' %}">logout</a> -->
 
-{% endblock content %}
+{% endblock %}
