--- a/itoneproj/itoneapp/templates/itoneapp/journal_edit.html
+++ b/itoneproj/itoneapp/templates/itoneapp/journal_edit.html
@@ -57,7 +57,7 @@
 
 
         <div class="d-flex justify-content-center mt-3">
-            <button type="submit" class="btn btn-primary btn-lg btn-block bg-color-blue">Save</button>
+            <button type="submit" class="text-white btn bg-color-blue text-center width-300 mt-2">Save</button>
         </div>
 
       </div>
