--- a/itoneproj/itoneapp/templates/itoneapp/journal_entry.html
+++ b/itoneproj/itoneapp/templates/itoneapp/journal_entry.html
@@ -57,9 +57,9 @@
 
         <div class="d-flex justify-content-center mt-3">
 
-          <!-- <a href="{% url 'itoneapp:journal_list' %}?emotion={{emotion.id}}"> -->
+          <a href="{% url 'itoneapp:journal_list' %}?emotion={{emotion.id}}">
             <button type="submit" class="btn btn-primary btn-lg btn-block bg-color-blue">Done</button>
-          <!-- </a> -->
+          </a>
 
         </div>
       </div>
