--- a/itoneproj/itoneapp/templates/itoneapp/profile.html
+++ b/itoneproj/itoneapp/templates/itoneapp/profile.html
@@ -67,7 +67,7 @@
 
 
       <div class="col-lg-12 col-md-12 col-sm-12 d-flex justify-content-center mt-13">
-          <a class="btn btn-primary btn-lg btn-block bg-white text-color-blue" href="{% url 'itoneapp:logout' %}">logout</a>
+          <a class="text-color-blue btn bg-white text-center width-300 mt-2" href="{% url 'itoneapp:logout' %}">logout</a>
       </div>
 
 
