--- a/itoneproj/itoneapp/templates/itoneapp/base.html
+++ b/itoneproj/itoneapp/templates/itoneapp/base.html
@@ -65,10 +65,14 @@
             <li class="nav-item mt-5">
               <!-- <a href="{% url 'itoneapp:logout' %}" class="nav-link">Logout</a> -->
               <a href="{% url 'itoneapp:logout' %}">
-                <button type="button" class="btn btn-primary btn-lg btn-block bg-color-blue">Logout</button>
+                <div type="button" class="text-white btn bg-color-blue text-center width-300 mt-2">Logout</div>
               </a>
+
             </li>
+
+
           </ul>
+
         </nav>
 
       </div>
