--- a/itoneproj/itoneapp/templates/itoneapp/login.html
+++ b/itoneproj/itoneapp/templates/itoneapp/login.html
@@ -1,20 +1,58 @@
-
 {% extends "itoneapp/base0.html" %}
+{% load static %}
 {% block content %}
 
-  {% if message == 'failure' %}
-  <h3 style="color:red">That username and password do not match</h3>
-  {% elif message == 'loggedout' %}
-  <h3 style="color:blue">Successfully logged out</h3>
-  {% endif %}
-  <h1>Login</h1>
-  <form action="{% url 'itoneapp:login_user' %}" method="post">
-    {% csrf_token %}
-    <input type="hidden" name="next" value="{{next}}"/>
-    <input type="text" name="username" value="" placeholder="username">
-    <input type="password" name="password" value="" placeholder="password">
-    <button type="submit">login</button>
-  </form>
-  <a href="{% url 'itoneapp:register' %}">Sign up</a>
+<div class="container">
+  <div class="row">
+    <div class="col mt-10">
+      <div class="d-flex justify-content-center">
+        <a href="{% url 'itoneapp:home' %}">
+          <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="200px"/>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container  d-flex justify-content-center">
+  <div class="row mt-10">
+    <div class="col d-flex justify-content-center">
+      {% if message == 'failure' %}
+      <h6 class="text-center" style="color:red">That username and password do not match</h6>
+      {% elif message == 'loggedout' %}
+      <h6 class="text-center text-color-blue">Successfully logged out</h6>
+      {% endif %}
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-5">
+    <div class="col">
+      <form class="" action="{% url 'itoneapp:login_user' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="next" value="{{next}}"/>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="username" value="" placeholder="username">
+        </div>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="password" name="password" value="" placeholder="password">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="text-white btn bg-color-blue text-center width-300 mt-2" type="submit">login</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-8">
+    <div class="col d-flex justify-content-between">
+      <div><a class="text-dark" href="">Forgot password</a></div>
+      <div><a class="text-dark" href="{% url 'itoneapp:register' %}">Sign up</a></div>
+    </div>
+  </div>
+</div>
 
 {% endblock content %}
