--- a/itoneproj/itoneapp/templates/itoneapp/register.html
+++ b/itoneproj/itoneapp/templates/itoneapp/register.html
@@ -1,17 +1,61 @@
-
-
 {% extends "itoneapp/base0.html" %}
+{% load static %}
 {% block content %}
 
-  <h1>Register</h1>
-  <form action="{% url 'itoneapp:register_user' %}" method="post">
-    {% csrf_token %}
-    <input type="text" name="name" value="" placeholder="name">
-    <input type="text" name="username" value="" placeholder="username">
-    <input type="email" name="email" value="" placeholder="email">
-    <input type="password" name="password" value="" placeholder="password">
-    <button type="submit">register</button>
-  </form>
-  <a href="{% url 'itoneapp:login' %}">login</a>
+<div class="container">
+  <div class="row">
+    <div class="col mt-10">
+      <div class="d-flex justify-content-center">
+        <a href="{% url 'itoneapp:home' %}">
+          <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="200px"/>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-center">
+        <p>Register</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-10">
+    <div class="col">
+
+      <form action="{% url 'itoneapp:register_user' %}" method="post">
+        {% csrf_token %}
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="name" value="" placeholder="name">
+        </div>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="username" value="" placeholder="username">
+        </div>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="email" name="email" value="" placeholder="email">
+        </div>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="password" name="password" value="" placeholder="password">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="text-white btn bg-color-blue text-center width-300 mt-2" type="submit">register</button>
+        </div>
+      </form>
+
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-5">
+    <div class="col d-flex justify-content-center">
+      <div><a class="text-dark" href="{% url 'itoneapp:login' %}">Already have an account?</a></div>
+    </div>
+  </div>
+</div>
+
+
 
 {% endblock content %}
