--- a/itoneproj/itoneapp/templates/itoneapp/base.html
+++ b/itoneproj/itoneapp/templates/itoneapp/base.html
@@ -60,7 +60,7 @@
               <a href="{% url 'itoneapp:journal_list' %}" class="nav-link">Journal</a>
             </li>
             <li class="nav-item">
-              <a href="projects.html" class="nav-link">Evaluation</a>
+              <a href="{% url 'itoneapp:evaluation' %}" class="nav-link">Evaluation</a>
             </li>
             <li class="nav-item mt-5">
               <!-- <a href="{% url 'itoneapp:logout' %}" class="nav-link">Logout</a> -->
