--- a/itoneproj/itoneapp/templates/itoneapp/journal_entry.html
+++ b/itoneproj/itoneapp/templates/itoneapp/journal_entry.html
@@ -25,7 +25,7 @@
   </div>
 
   <form class="row mt-5" action="{% url 'itoneapp:savejournal' %}" method="post">
-    <input type="hidden" value="" name="emotion" id="change_emotion">
+    <input type="hidden" value="{{emotion.id}}" name="emotion" id="change_emotion">
     <div class="col-lg-12 col-md-6 col-sm-6 d-flex justify-content-between">
       {% csrf_token %}
 
@@ -57,9 +57,9 @@
 
         <div class="d-flex justify-content-center mt-3">
 
-          <a href="{% url 'itoneapp:journal_list' %}?emotion={{emotion.id}}">
+          <!-- <a href="{% url 'itoneapp:journal_list' %}?emotion={{emotion.id}}"> -->
             <button type="submit" class="btn btn-primary btn-lg btn-block bg-color-blue">Done</button>
-          </a>
+          <!-- </a> -->
 
         </div>
       </div>
