--- a/itoneproj/itoneapp/templates/itoneapp/evaluation.html
+++ b/itoneproj/itoneapp/templates/itoneapp/evaluation.html
@@ -10,8 +10,6 @@
 
 </style>
 
-
-
 <div class="container">
 
   <div class="row">
@@ -53,48 +51,6 @@
 
       <canvas id="myChart" width="400" height="500"></canvas>
 
-      <script>
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['', '', '', '', '', ''],
-                // labels: ['Joy', 'Love', 'Surprise', 'Anger', 'Sadness', 'Fear'],
-                datasets: [{
-                    label: 'Intensity',
-                    label: '',
-                    data: {{intensities}},
-                    backgroundColor: [
-                        'rgba(238, 122, 47, 0.2)',
-                        'rgba(189, 42, 116, 0.2)',
-                        'rgba(234, 217, 23, 0.2)',
-                        'rgba(232, 54, 38, 0.2)',
-                        'rgba(39, 22, 157, 0.2)',
-                        'rgba(35, 31, 32, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(238, 122, 47, 1)',
-                        'rgba(189, 42, 116, 1)',
-                        'rgba(234, 217, 23, 1)',
-                        'rgba(232, 54, 38, 1)',
-                        'rgba(39, 22, 157, 1)',
-                        'rgba(35, 31, 32, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                }
-            }
-        });
-      </script>
-
     </div>
 
   </div>
@@ -107,8 +63,8 @@
 
       <!-- loop over emotions and make a div for each -->
       {% for emotion in emotions %}
-      <div class="text-center">
-        <a href="{% url 'itoneapp:evaluation' %}"><img src="{{emotion.icon.url}}" alt="" width="50px" class="rounded-circle shadow"></a>
+      <div class="text-center emo_btn">
+        <a onclick="emo_btn"><img src="{{emotion.icon.url}}" alt="" width="50px" class="rounded-circle shadow"></a>
 
         <div class="font-10 mt-1">{{emotion.name}}</div>
       </div>
@@ -118,10 +74,78 @@
   </div>
 </div>
 
+<script type="text/javascript">
 
 
+  let ctx = document.getElementById('myChart').getContext('2d');
+  let colors_transparent = [
+      'rgba(238, 122, 47, 0.2)',
+      'rgba(189, 42, 116, 0.2)',
+      'rgba(234, 217, 23, 0.2)',
+      'rgba(232, 54, 38, 0.2)',
+      'rgba(39, 22, 157, 0.2)',
+      'rgba(35, 31, 32, 0.2)'
+  ]
+  let colors_opaque = [
+      'rgba(238, 122, 47, 1)',
+      'rgba(189, 42, 116, 1)',
+      'rgba(234, 217, 23, 1)',
+      'rgba(232, 54, 38, 1)',
+      'rgba(39, 22, 157, 1)',
+      'rgba(35, 31, 32, 1)'
+  ]
+  let myChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+          labels: ['', '', '', '', '', ''],
+          // labels: ['Joy', 'Love', 'Surprise', 'Anger', 'Sadness', 'Fear'],
+          datasets: [{
+              label: 'Intensity',
+              data: {{intensities}},
+              backgroundColor: colors_transparent.slice(),
+              borderColor: colors_opaque.slice(),
+              borderWidth: 1
+          }]
+      },
+      options: {
+          legend: {
+            display:false
+          },
+          scales: {
+              yAxes: [{
+                  ticks: {
+                      beginAtZero: true
+                  }
+              }]
+          }
+      }
+  });
 
+  // Selected emotion icons on the graph
+  let emo_btn = document.querySelectorAll('.emo_btn')
 
-<!-- <script src="{% static 'itoneapp/js/main.js' %}"></script> -->
+  for (let i=0; i < emo_btn.length; ++i) {
+    emo_btn[i].dataset.show = 'true'
+    emo_btn[i].addEventListener('click', function() {
+      if (emo_btn[i].dataset.show == 'false') {
+        emo_btn[i].dataset.show = 'true'
+        emo_btn[i].style.opacity = 1
+
+        myChart.data.datasets[0].backgroundColor[i] = colors_transparent[i]
+        myChart.data.datasets[0].borderColor[i] = colors_opaque[i]
+        myChart.update();
+
+      } else {
+        emo_btn[i].dataset.show = 'false'
+        emo_btn[i].style.opacity = 0.2
+
+        myChart.data.datasets[0].backgroundColor[i] = 'transparent'
+        myChart.data.datasets[0].borderColor[i] = 'transparent'
+        myChart.update();
+      }
+    })
+  }
+
+</script>
 
 {% endblock %}
