--- a/itoneproj/itoneapp/templates/itoneapp/register.html
+++ b/itoneproj/itoneapp/templates/itoneapp/register.html
@@ -4,11 +4,11 @@
 
 <div class="container">
   <div class="row">
-    <div class="col mt-10">
+    <div class="col mt-8">
       <div class="d-flex justify-content-center">
-        <a href="{% url 'itoneapp:home' %}">
-          <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="200px"/>
-        </a>
+
+        <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="200px"/>
+
       </div>
     </div>
   </div>
@@ -22,26 +22,32 @@
 </div>
 
 <div class="container">
-  <div class="row mt-10">
+  <div class="row mt-8">
     <div class="col">
 
-      <form action="{% url 'itoneapp:register_user' %}" method="post">
+      <form action="{% url 'itoneapp:register_user' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
+
+
         <div class="d-flex justify-content-center">
-          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="name" value="" placeholder="name">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="name" value="" placeholder="name" required>
         </div>
         <div class="d-flex justify-content-center">
-          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="username" value="" placeholder="username">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="text" name="username" value="" placeholder="username" required>
         </div>
         <div class="d-flex justify-content-center">
-          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="email" name="email" value="" placeholder="email">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="email" name="email" value="" placeholder="email" required>
         </div>
         <div class="d-flex justify-content-center">
-          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="password" name="password" value="" placeholder="password">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="password" name="password" value="" placeholder="password" required>
+        </div>
+        <div class="d-flex justify-content-center">
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="file" name="profile_image" accept="image/*" required>
         </div>
         <div class="d-flex justify-content-center">
           <button class="text-white btn bg-color-blue text-center width-300 mt-2" type="submit">register</button>
         </div>
+
       </form>
 
     </div>
@@ -49,7 +55,7 @@
 </div>
 
 <div class="container">
-  <div class="row mt-5">
+  <div class="row mt-6">
     <div class="col d-flex justify-content-center">
       <div><a class="text-dark" href="{% url 'itoneapp:login' %}">Already have an account?</a></div>
     </div>
